--- a/templates/UserSettingsView.html
+++ b/templates/UserSettingsView.html
@@ -12,10 +12,10 @@
 				<div data-bind="foreach: scopes">
 					<div class="row">
 						<span class="value">
-							<label class="custom_checkbox" data-bind="css: {'checked': value}">
+							<label class="custom_checkbox" data-bind="css: {'checked': Value}">
 								<span class="value" style="float: left;">
 									<span class="icon"></span>
-									<input type="checkbox" data-bind="checked: value, attr: { id: Name}" />
+									<input type="checkbox" data-bind="checked: Value, attr: { id: Name}" />
 								</span>
 							</label>
 							<label data-bind="text: $data.Description, attr: {for: Name}" />
